app/globals.css
:root {
	--background: #ffffff;
	--foreground: #171717;
}

@media (prefers-color-scheme: dark) {
	:root {
		--background: #0a0a0a;
		--foreground: #ededed;
	}
}

html,
body {
	height: 100%;
	overflow-x: hidden;
}

body {
	color: var(--foreground);
	background: var(--background);
	font-family: Arial, Helvetica, sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

* {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
}

a {
	color: inherit;
	text-decoration: none;
}

::-webkit-scrollbar {
	width: 8px;
}

::-webkit-scrollbar-track {
	background: transparent;
	border-radius: 4px;
}

::-webkit-scrollbar-thumb {
	background: #bbb;
	border-radius: 6px;
}

::-webkit-scrollbar-thumb:hover {
	background: #999;
}

@media (prefers-color-scheme: dark) {
	html {
		color-scheme: dark;
	}
}

@media (max-width: 1299px) {
	html {
		zoom: 0.9;
	}
}

@media (max-width: 1099px) {
	html {
		zoom: 0.8;
	}
}

